Fixed header font sizes and alignment

--- a/style.css
+++ b/style.css
@@ -7,18 +7,20 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   color: white;
 }
 
 header h3 {
   margin-bottom: 0;
+  font-size: 24px;
+  color: #e5e7eb;
 }
 
 .hero {
   background-color: #1f2937;
   color: white;
-  padding: 0 12%;
+  padding: 0 15%;
 }
 
 .hero a {
@@ -28,40 +30,47 @@ header h3 {
 
 header ul {
   display: flex;
-  font-size: 75%;
+  font-size: 18px;
+  color: #e5e7eb;
   margin-bottom: 0;
-  gap: 16px;
+  gap: 18px;
   list-style-type: none;
 }
 
 .heading-container {
   display: flex;
-  justify-content: space-between;
   padding: 100px 0;
+  justify-content: space-between;
 }
 
 .heading-container h1 {
   margin: 0;
+  font-size: 48px;
+  font-weight: 10000;
+  color: #f9faf8;
+}
+
+.heading-container p {
+  font-size: 18px;
 }
 
 .heading {
-  display: flex;
-  flex-direction: column;
-  margin-right: 26px;
-  width: 45%;
 }
 
 .heading p {
   margin: 8px 0;  
+  font-size: 18px;
+  color:  #e5e7eb;
 }
 
 .heading button {
-  height: 30px;
-  width: 100px;
+  height: 32px;
+  width: 116px;
   border-radius: 5px;
   background-color: #3882f6;
   color: white;
   border: none;
+  font-weight:bold;
 }
 
 .hero-image {
@@ -69,7 +78,52 @@ header ul {
   justify-content: center;
   align-items: center;
   background-color: #6d747d;
-  padding: 30px;
-  min-width: 45%;
-  min-height: 45%;
+  padding: 120px;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 200px;
+  margin-bottom: 80px;
+}
+
+.info-container h1 {
+  font-size: 36px;
+  font-weight: 1000;
+  color: #1f2937;
+  margin: 50px 0;
+}
+
+.card-container {
+  display: flex;
+  text-align: center;
+  gap: 50px;;
+  justify-content: center;
+}
+
+.information-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 0;
+}
+
+.information-card p {
+  margin-top: 8px;
+  font-weight: 100;
+}
+
+.info-image {
+  width: 170px;
+  height: 170px;
+  border: 3px solid #3882f6;
+  border-radius: 12px;
+  
+}
+
+.testimonial-container {
+  background-color: #E5E7EB;
 }
